# greco

./: .gitignore  Cargo.toml  LICENSE  README.md  circuit.py  circuit_pk.py  circuit_sk.py  requirements.txt  scripts.py  utils.py
.github/workflows/: circuit-sk.yml
python_poc/: circuit_pk.py  circuit_sk.py  requirements.txt  utils.py
scripts/: .gitignore  circuit_sk.py  requirements.txt  test.py  utils.py
src/: circuit.rs  dummy_circuit.rs  lib.rs  poly.rs  sk_encryption_circuit.rs  utils.rs
src/constants/: mod.rs  sk_enc.rs  sk_enc_constants_1024_15x60_65537.rs  sk_enc_constants_1024_1x27_65537.rs  sk_enc_constants_16384_8x54_65537.rs  sk_enc_constants_2048_15x60_65537.rs  sk_enc_constants_2048_1x53_65537.rs  sk_enc_constants_32768_15x59_65537.rs  sk_enc_constants_4096_15x60_65537.rs  sk_enc_constants_4096_2x55_65537.rs  sk_enc_constants_8192_15x60_65537.rs  sk_enc_constants_8192_4x55_65537.rs
src/data/: sk_enc_1024_15x60_65537.json  sk_enc_1024_1x27_65537.json  sk_enc_1024_1x27_65537_zeroes.json  sk_enc_2048_15x60_65537_zeroes.json  sk_enc_2048_1x53_65537.json  sk_enc_2048_1x53_65537_zeroes.json  sk_enc_4096_15x60_65537_zeroes.json  sk_enc_4096_2x55_65537.json  sk_enc_4096_2x55_65537_zeroes.json  sk_enc_8192_15x60_65537_zeroes.json  sk_enc_8192_4x55_65537_zeroes.json  sk_enc_input.json
src/data/bench/: sk_enc_1024_15x60_65537.json  sk_enc_1024_15x60_65537_zeroes.json
